...
        Количество сыгранных квизов: \(gamesCount)
        Рекорд: \(bestGameText) (\(bestGameDateFormatted))
        Средняя точность: \(String(format: "%.1f", totalAccuracy))%
        """

        let alertModel = AlertModel(
            title: "Этот раунд окончен!",
            message: message,
            buttonText: "Сыграть ещё раз",
            completion: { [weak self] in
                self?.startQuiz()
            }
        )

        alertPresenter.presentAlert(with: alertModel)
...
